change html and search filter added

--- a/js-adakitten/index.html
+++ b/js-adakitten/index.html
@@ -48,7 +48,8 @@
           />
           <input class="input" type="text" placeholder="Nombre" required />
           <input class="input" type="text" placeholder="Raza" />
-          <input class="input" type="text" placeholder="Descripción" required />
+          <input class="input js_in_search_desc" type="text" value="elegante" />
+
           <label class=""></label>
           <button class="button">Añadir</button>
           <button class="button-cancel">Cancelar</button>
@@ -78,7 +79,7 @@
 
       <section class="data">
         <ul class="list js-list">
-          <!-- <li class="card">
+          <li class="card">
             <article>
               <img
                 class="card_img"
@@ -87,15 +88,15 @@
               />
               <h3 class="card_title">Anastacio</h3>
               <h4 class="card_race">Siamés</h4>
-              <p class="card_description">
+              <p class="card_description js-card_descriptionOne">
                 Porte elegante, su patrón de color tan característico y sus ojos
                 de un azul intenso, pero su historia se remonta a Asía al menos
                 hace 500 años, donde tuvo su origen muy posiblemente.
               </p>
             </article>
-          </li> -->
+          </li>
 
-          <!-- <li class="card">
+          <li class="card">
             <img
               class="card_img"
               src="https://dev.adalab.es/sphynx-gato.webp"
@@ -103,13 +104,13 @@
             />
             <h3 class="card_title">Fiona</h3>
             <h4 class="card_race">Sphynx</h4>
-            <p class="card_description">
+            <p class="card_description js-card_descriptionTwo">
               Produce fascinación y curiosidad. Exótico, raro, bello, extraño…
               hasta con pinta de alienígena han llegado a definir a esta raza
               gatuna que se caracteriza por la «ausencia» de pelo.
             </p>
-          </li> -->
-          <!-- <li class="card">
+          </li>
+          <li class="card">
             <img
               class="card_img"
               src="https://dev.adalab.es/maine-coon-cat.webp"
@@ -117,12 +118,12 @@
             />
             <h3 class="card_title">Cielo</h3>
             <h4 class="card_race">Maine Coon</h4>
-            <p class="card_description">
+            <p class="card_description js-card_descriptionThree">
               Tienen la cabeza cuadrada y los ojos simétricos, por lo que su
               bella mirada se ha convertido en una de sus señas de identidad.
               Sus ojos son grandes y las orejas resultan largas y en punta.
             </p>
-          </li> -->
+          </li>
         </ul>
       </section>
     </main>
