show/hidden form

--- a/js-adakitten/index.html
+++ b/js-adakitten/index.html
@@ -29,7 +29,7 @@
         <nav class="menu-nav">
           <ul class="menu">
             <li class="item">
-              <span class="fas fa-plus-circle"> </span>
+              <span class="fas fa-plus-circle js-cat-form"> </span>
             </li>
           </ul>
         </nav>
@@ -44,26 +44,25 @@
             class="input js-input-photo"
             type="text"
             placeholder="Url de la foto"
-            required/>
-          <input 
-          class="input js-input-name" 
-          type="text" 
-          placeholder="Nombre" 
-          required />
-          <input 
-          class="input js-input-race" 
-          ype="text" 
-          placeholder="Raza"/>
-          <input 
-          class="input js_in_search_desc" 
-          placeholder="Descripción" 
-          type="text"/>
+            required
+          />
+          <input
+            class="input js-input-name"
+            type="text"
+            placeholder="Nombre"
+            required
+          />
+          <input class="input js-input-race" type="text" placeholder="Raza" />
+          <input
+            class="input js_in_search_desc"
+            placeholder="Descripción"
+            type="text"
+          />
 
           <label class="js-label-error"></label>
           <button class="button js-add-button">Añadir</button>
           <button class="button-cancel js-cancel-button">Cancelar</button>
         </form>
-
       </section>
 
       <section class="about-us">
